# SCRAPING

./: README.md  pyproject.toml
scraping/: Check_category_qty.py  Check_star.py  Check_value_stock.py  Check_value_stock_selectolax.py  Scraping.py  main.py  price.py  selecto.py
