[tool.poetry]
name = "scraping"
version = "0.1.0"
description = ""
authors = ["Therealcorwin <therealcorwin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
black = "^24.4.0"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
